[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/models/model_enemy_megawizard.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/enemy/megawizard/megawizard.gd" type="Script" id=2]
[ext_resource path="res://scenes/shared/vfx_magic_mine_cast.tscn" type="PackedScene" id=3]
[ext_resource path="res://sfx/megawiz_laser.ogg" type="AudioStream" id=4]
[ext_resource path="res://sfx/megawiz_hit.ogg" type="AudioStream" id=5]
[ext_resource path="res://sfx/megawiz_cast.ogg" type="AudioStream" id=6]

[sub_resource type="SphereShape" id=1]
radius = 2.0

[sub_resource type="SphereShape" id=2]
radius = 0.75

[node name="MegaWizard" type="KinematicBody"]
collision_layer = 4096
collision_mask = 4096
script = ExtResource( 2 )

[node name="model" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 6.45, -2.0067e-07 )
shape = SubResource( 1 )

[node name="CollisionShape2" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 2.5, 5.95, -1.78814e-07 )
shape = SubResource( 2 )

[node name="CollisionShape3" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -2.5, 5.95, -1.78814e-07 )
shape = SubResource( 2 )

[node name="NavigationAgent" type="NavigationAgent" parent="."]
target_desired_distance = 2.0
agent_height_offset = 0.4
navigation_layers = 4

[node name="blink_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="state_timer" type="Timer" parent="."]
one_shot = true

[node name="gun_cooldown" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="mines_cooldown" type="Timer" parent="."]
one_shot = true

[node name="ray_sight" type="RayCast" parent="."]
cast_to = Vector3( 0, 0, -200 )
collision_mask = 257
debug_shape_custom_color = Color( 0.909804, 0.0156863, 0.984314, 1 )

[node name="Castfx" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8, 0 )
visible = false

[node name="wall_check_ray" type="RayCast" parent="."]
cast_to = Vector3( 0, 0, -200 )
collision_mask = 256

[node name="body" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 5 )
unit_db = 4.0
unit_size = 4.0
max_db = -3.0
bus = "enemies"

[node name="guns" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )
unit_db = 6.0
unit_size = 4.0
max_db = -1.0
bus = "enemies"

[node name="magic" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 6 )
unit_db = 4.0
unit_size = 4.0
max_db = -1.0
bus = "enemies"

[connection signal="timeout" from="blink_timer" to="." method="_on_blink_timer_timeout"]
[connection signal="timeout" from="state_timer" to="." method="_on_state_timer_timeout"]
[connection signal="timeout" from="gun_cooldown" to="." method="_on_gun_cooldown_timeout"]
